--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   punk zine aesthetic - raw, handmade, web 2.0
 */
 
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500&family=JetBrains+Mono:ital,wght@0,400;0,500;1,400&family=Instrument+Serif:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;1,400;1,500&family=JetBrains+Mono:ital,wght@0,400;0,500;1,400&family=Instrument+Serif:ital@0;1&family=Montserrat:wght@300;400;500&display=swap');
 
 :root {
   --bg-paper: #f5f3ed;
